Customer360/deployment/K8s/pingaccess-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f Compose/docker-compose.yaml --volumes configMap
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: pingaccess
  name: pingaccess
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: pingaccess
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f Compose/docker-compose.yaml --volumes configMap
        kompose.version: 1.21.0 ()
      creationTimestamp: null
      labels:
        io.kompose.service: pingaccess
    spec:
      containers:
      - env:
        - name: PF_LOG_LEVEL
          valueFrom:
            configMapKeyRef:
              key: PF_LOG_LEVEL
              name: env-vars
        - name: PF_USER_PWD
          valueFrom:
            configMapKeyRef:
              key: PF_USER_PWD
              name: env-vars
        - name: PING_DEBUG
          valueFrom:
            configMapKeyRef:
              key: PING_DEBUG
              name: env-vars
        - name: PING_IDENTITY_ACCEPT_EULA
          valueFrom:
            configMapKeyRef:
              key: PING_IDENTITY_ACCEPT_EULA
              name: env-vars
        - name: PING_IDENTITY_DEVOPS_HOME
          valueFrom:
            configMapKeyRef:
              key: PING_IDENTITY_DEVOPS_HOME
              name: devops
        - name: PING_IDENTITY_DEVOPS_KEY
          valueFrom:
            configMapKeyRef:
              key: PING_IDENTITY_DEVOPS_KEY
              name: devops
        - name: PING_IDENTITY_DEVOPS_TAG
          valueFrom:
            configMapKeyRef:
              key: PING_IDENTITY_DEVOPS_TAG
              name: devops
        - name: PING_IDENTITY_DEVOPS_USER
          valueFrom:
            configMapKeyRef:
              key: PING_IDENTITY_DEVOPS_USER
              name: devops
        - name: USER_BASE_DN
          valueFrom:
            configMapKeyRef:
              key: USER_BASE_DN
              name: env-vars
        image: pingidentity/pingaccess:6.0.1-edge
        imagePullPolicy: ""
        name: pingaccess
        ports:
        - containerPort: 8080
        - containerPort: 3000
        - containerPort: 9000
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
