Customer360/deployment/K8s/pingaccess-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f Compose/docker-compose.yaml --volumes configMap
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: pingaccess
  name: pingaccess
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 8080
  - name: "443"
    port: 443
    targetPort: 3000
  - name: "9000"
    port: 9000
    targetPort: 9000
  selector:
    io.kompose.service: pingaccess
status:
  loadBalancer: {}
