Customer360/deployment/K8s/pingdataconsole-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f Compose/docker-compose.yaml --volumes configMap
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: pingdataconsole
  name: pingdataconsole
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  - name: "8443"
    port: 8443
    targetPort: 8443
  selector:
    io.kompose.service: pingdataconsole
status:
  loadBalancer: {}
