Customer360/deployment/K8s/pingdatasync-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f Compose/docker-compose.yaml --volumes configMap
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: pingdatasync
  name: pingdatasync
spec:
  ports:
  - name: "3636"
    port: 3636
    targetPort: 636
  - name: "3443"
    port: 3443
    targetPort: 443
  selector:
    io.kompose.service: pingdatasync
status:
  loadBalancer: {}
