Customer360/deployment/K8s/pingfederate-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f Compose/docker-compose.yaml --volumes configMap
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: pingfederate
  name: pingfederate
spec:
  ports:
  - name: "9031"
    port: 9031
    targetPort: 9031
  - name: "9999"
    port: 9999
    targetPort: 9999
  selector:
    io.kompose.service: pingfederate
status:
  loadBalancer: {}
