Customer360/deployment/K8s/pingaccess-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx-public-passthrough
    nginx.ingress.kubernetes.io/service-upstream: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  name: pingaccess-ingress-customer360
  namespace: ping-cloud-devops-eks-cprice
spec:
  rules:
  - host: pingaccess-ping-cloud-devops-eks-cprice.ping-devops.com
    http:
      paths:
      # This rule gives external access to the pingaccess AS endpoints
      - path: /
        backend:
          serviceName: pingaccess
          servicePort: 443
      - path: /.well-known/acme-challenge/
        backend:
          serviceName: pingaccess
          servicePort: 80
  - host: demo.cpricelab.com
    http:
      paths:
      # This rule gives external access to the pingaccess AS endpoints
      - path: /
        backend:
          serviceName: pingaccess
          servicePort: 443
      - path: /.well-known/acme-challenge/
        backend:
          serviceName: pingaccess
          servicePort: 80
